tdf#114684: don't print pages for ranges completely outside ...

... of possible pages range.

Change-Id: Ibe50f116aecdad8c7cba7f9844bc04c15716d127